introduced input params in reportBuilders ald created nice loop